# rawdata

./: CITATION.cff  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
deshima_rawdata/: __init__.py  cli.py  data.csv
tests/: test_cli.py
