[tool.poetry]
name = "deshima-rawdata"
version = "2023.11.4"
description = "DESHIMA raw data and downloader package"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
fire = "^0.5"
packaging = "^23.0"
requests = "^2.30"
tqdm = "^4.65"

[tool.poetry.dependencies.pandas]
extras = ["output-formatting"]
version = ">=1.5, <3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11"
ipython = "^8.17"
pyright = "^1.1"
pytest = "^7.4"

[tool.poetry.scripts]
deshima-rawdata = "deshima_rawdata.cli:main"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
